perbaiki ukuran map

--- a/hubungi-kami.html
+++ b/hubungi-kami.html
@@ -149,9 +149,9 @@
         <div class="m-bot-10">
           <section class="google-map-container">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d991.5206433910213!2d106.924907907479!3d-6.252850709947655!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwMTUnMTAuMiJTIDEwNsKwNTUnMjkuNSJF!5e0!3m2!1sen!2sid!4v1718114534340!5m2!1sen!2sid"
+              src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d991.5206428410502!2d106.924908!3d-6.252851!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwMTUnMTAuMiJTIDEwNsKwNTUnMjkuNSJF!5e0!3m2!1sen!2sid!4v1718119173687!5m2!1sen!2sid"
               width="100%"
-              height="600"
+              height="500"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
@@ -179,9 +179,8 @@
                   href="https://maps.app.goo.gl/ftj8STzJA5FidyF8A"
                 >
                   Perum Permata Timur
-				  <br />Jl. Raya Permata Timur Blok A Lt.2
-                  <br />Desa Pondok Kelapa, Kec. Duren Sawit, Kota Adm Jakarta
-                  Timur
+                  <br />Jl. Raya Permata Timur Blok A Lt.2 <br />Desa Pondok
+                  Kelapa, Kec. Duren Sawit, Kota Adm Jakarta Timur
                 </a>
               </li>
               <li class="contact-phone">
