update halaman dokumentasi

--- a/dokumentasi.html
+++ b/dokumentasi.html
@@ -459,14 +459,13 @@
             </div>
           </li>
 
-          <!-- --------------------------------- -->
           <!-- Dokumentasi item 13 -->
           <li class="one-third column m-bot-35">
             <div class="hover-item">
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-13.png"
-                  alt="13"
+                  alt="Marka Jalan Thermoplastik (Zebra Cross)"
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -479,7 +478,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">13</span>
+                    <span class="bold">Marka Jalan Thermoplastik (Zebra Cross)</span>
                   </div>
                 </div>
               </div>
@@ -492,7 +491,7 @@
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-14.png"
-                  alt="14"
+                  alt="Speed Bump"
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -505,7 +504,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">14</span>
+                    <span class="bold">Speed Bump</span>
                   </div>
                 </div>
               </div>
@@ -518,7 +517,7 @@
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-15.png"
-                  alt="15"
+                  alt="Marka Jalan Coldplastik (Jalur Busway)"
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -531,7 +530,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">15</span>
+                    <span class="bold">Marka Jalan Coldplastik (Jalur Busway)</span>
                   </div>
                 </div>
               </div>
@@ -544,7 +543,7 @@
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-16.png"
-                  alt="16"
+                  alt="Marka Jalan Coldplastik (Jalur Pejalan Kaki) "
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -557,7 +556,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">16</span>
+                    <span class="bold">Marka Jalan Coldplastik (Jalur Pejalan Kaki) </span>
                   </div>
                 </div>
               </div>
@@ -570,7 +569,7 @@
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-17.png"
-                  alt="17"
+                  alt="Marka Jalan Thermoplastik (Dilarang Parkir) "
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -583,7 +582,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">17</span>
+                    <span class="bold">Marka Jalan Thermoplastik (Dilarang Parkir) </span>
                   </div>
                 </div>
               </div>
@@ -596,7 +595,7 @@
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-18.png"
-                  alt="18"
+                  alt="Paku Marka Solar Cell"
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -609,7 +608,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">18</span>
+                    <span class="bold">Paku Marka Solar Cell</span>
                   </div>
                 </div>
               </div>
@@ -622,7 +621,7 @@
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-19.png"
-                  alt="19"
+                  alt="Patok Pengaman (Delineator Plastik)"
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -635,7 +634,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">19</span>
+                    <span class="bold">Patok Pengaman (Delineator Plastik)</span>
                   </div>
                 </div>
               </div>
@@ -648,7 +647,7 @@
               <div class="view view-first">
                 <img
                   src="images/dokumentasi/dokumentasi-800x491-20.png"
-                  alt="20"
+                  alt="Pagar portal"
                 />
                 <div class="mask"></div>
                 <div class="abs">
@@ -661,7 +660,7 @@
               <div class="lw-item-caption-container">
                 <div class="item-title-main-container clearfix">
                   <div class="item-title-text-container">
-                    <span class="bold">20</span>
+                    <span class="bold">Pagar portal</span>
                   </div>
                 </div>
               </div>
