update text header jadi capital

--- a/profil.html
+++ b/profil.html
@@ -134,7 +134,7 @@
         <div class="container m-bot-35 clearfix">
           <div class="sixteen columns">
             <div class="page-title-container clearfix">
-              <h1 class="page-title">Profil Perusahaan</h1>
+              <h1 class="page-title">PROFIL PERUSAHAAN</h1>
             </div>
           </div>
         </div>
