--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 >
                   <div class="container">
                     <div class="sixteen columns contain">
-                      <h2 data-toptitle="35%">CV. Sentosa Anara Nusantara</h2>
+                      <h2 class="links-top" data-toptitle="35%">CV. Sentosa Anara Nusantara</h2>
                       <div class="links" data-bottomlinks="45%">
                         <a
                           class="button medium r-m-plus r-m-full"
@@ -173,7 +173,7 @@
                 >
                   <div class="container">
                     <div class="sixteen columns contain">
-                      <h2 data-toptitle="35%">Dokumentasi</h2>
+                      <h2 class="links-top" data-toptitle="35%">Dokumentasi</h2>
                       <div class="links" data-bottomlinks="45%">
                         <a
                           class="button medium r-m-plus r-m-full"
@@ -194,7 +194,7 @@
                 >
                   <div class="container">
                     <div class="sixteen columns contain">
-                      <h2 data-toptitle="35%">Produk</h2>
+                      <h2 class="links-top" data-toptitle="35%">Produk</h2>
                       <div class="links" data-bottomlinks="45%">
                         <a
                           class="button medium r-m-plus r-m-full"
