update legalitas dan download dokumen untuk mobile

--- a/profil.html
+++ b/profil.html
@@ -201,6 +201,12 @@
               <div class="caption-text-container">LEGALITAS PERUSAHAAN</div>
               <div class="content-container-white caption-bg"></div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="container m-bot-35 clearfix container-profile">
+        <div class="row">
+          <div class="sixteen columns legalitas container-profile">
             <ul id="toggle-view">
               <li>
                 <h3 class="ui-accordion-header">
