perbaikan margin div legalitas disemua device

--- a/profil.html
+++ b/profil.html
@@ -194,16 +194,17 @@
       </div>
 
 	    <!-- Legalitas Perusahaan -->
-      <div class="container m-bot-35 clearfix">
+      <div class="container m-bot-35 clearfix container-legalitas">
         <div class="row">
           <div class="sixteen columns legalitas">
-            <div class="caption-container-main m-bot-30">
+            <div class="caption-container-main m-bot-30 container-legalitas">
               <div class="caption-text-container">LEGALITAS PERUSAHAAN</div>
               <div class="content-container-white caption-bg"></div>
             </div>
           </div>
         </div>
       </div>
+
       <div class="container m-bot-35 clearfix container-profile">
         <div class="row">
           <div class="sixteen columns legalitas container-profile">
