perbaikan mobile layout rekanan

--- a/profil.html
+++ b/profil.html
@@ -218,7 +218,7 @@
 					<p>No. Akta Pendirian : 10</p>
 					<p>Tanggal : 11 Juli 2023</p>
 					<p>Notaris : Victory, S.H.,M.Kn.</p>
-					<p>SK Kemenkumham : AHU-0044622-AH.01.14 Tahun 2023</p>
+					<p>SK Kemenkumham : <br/>AHU-0044622-AH.01.14 Tahun 2023</p>
                   </p>
                 </div>
               </li>
@@ -238,7 +238,7 @@
                   <span class="link"></span>NOMOR INDUK BERUSAHA (NIB)
                 </h3>
                 <div class="panel">
-                  <p>Nomor Induk Berusaha (NIB) : 2007230174903</p>
+                  <p>Nomor Induk Berusaha (NIB) : <br/>2007230174903</p>
                 </div>
               </li>
 			  <li>
@@ -246,7 +246,7 @@
                   <span class="link"></span>NOMOR POKOK WAJIB PAJAK (NPWP)
                 </h3>
                 <div class="panel">
-                  <p>Nomor Pokok Wajib Pajak (NPWP) : 39.694.395.3-008.000</p>
+                  <p>Nomor Pokok Wajib Pajak (NPWP) : <br/>39.694.395.3-008.000</p>
                 </div>
               </li>
 			  <li>
@@ -254,7 +254,7 @@
                   <span class="link"></span>SURAT PENGUKUHAN PENGUSAHA KENA PAJAK (SPPKP)
                 </h3>
                 <div class="panel">
-                  <p>Pengukuhan Perusahan Kena Pajak (PPKP) : S-199/PKP/KKP.200903/2023</p>
+                  <p>Pengukuhan Perusahan Kena Pajak (PPKP) : <br/>S-199/PKP/KKP.200903/2023</p>
                 </div>
               </li>
 			  <li>
@@ -262,7 +262,7 @@
                   <span class="link"></span>REKOM KEMENTERIAN PERHUBUNGAN (TDBUPPJ)
                 </h3>
                 <div class="panel">
-                  <p>Rekom Kementerian Perehubungan (TDBUPPJ) : KP-DJPD 7700 Tahun 2023</p>
+                  <p>Rekom Kementerian Perehubungan (TDBUPPJ) : <br/>KP-DJPD 7700 Tahun 2023</p>
                 </div>
               </li>
 			  <li>
