--- a/profil.html
+++ b/profil.html
@@ -270,7 +270,9 @@
                   <span class="link"></span>SERTIFIKAT BADAN USAHA (SBU)
                 </h3>
                 <div class="panel">
-                  <p>Sertifikat Badan Usaha (SBU) : .........................................</p>
+                  <p>Sertifikat Badan Usaha (SBU) : 968.1.8.213.K.1A.3175.D24</p>
+                  <p>Sub Bidang : Distribusi Tenaga Listrik</p>
+                  <p>Spesialisasi : Jaringan Distribusi Tenaga Listrik Tegangan Rendah</p>
                 </div>
               </li>
             </ul>
