update email dan css icon nya

--- a/hubungi-kami.html
+++ b/hubungi-kami.html
@@ -173,27 +173,39 @@
 
           <div class="">
             <ul class="contact-list">
+             <li class="contact-loc">
+                <a
+                  target="_blank"
+                  href="https://maps.app.goo.gl/ftj8STzJA5FidyF8A"
+                >
+                   Perum Permata Timur
+                  <br />Jl. Raya Permata Timur Blok A Lt.2
+                </a>
+              </li>
               <li class="contact-loc">
                 <a
                   target="_blank"
                   href="https://maps.app.goo.gl/ftj8STzJA5FidyF8A"
                 >
-                  Perum Permata Timur
-                  <br />Jl. Raya Permata Timur Blok A Lt.2 <br />Desa Pondok
-                  Kelapa, Kec. Duren Sawit, Kota Adm Jakarta Timur
+                <br />Kelapa, Kec. Duren Sawit, Kota Adm Jakarta Timur
                 </a>
               </li>
               <li class="contact-map">
-                <a target="_blank" href="https://maps.app.goo.gl/ftj8STzJA5FidyF8A">https://maps.app.goo.gl/ftj8STzJA5FidyF8A</a>
+                <a target="_blank" href="https://maps.app.goo.gl/ftj8STzJA5FidyF8A">Klik untuk Lihat Peta</a>
               </li>
               <li class="contact-phone">
                 <a href="tel:+6282112152464">(+62) 821 1215 2464</a>
               </li>
               <li class="contact-mail">
                 <a href="mailto:sentosaanaranusantaracv@gmail.com"
-                  >SentosaAnaraNusantaraCV@gmail.com</a
+                  >sentosaanaranusantaracv@gmail.com</a
                 >
               </li>
+              <li class="contact-mail">
+                <a href="mailto:info@sentosaanaranusantara.co.id"
+                  >info@sentosaanaranusantara.co.id</a
+                >
+              </li>              
             </ul>
           </div>
         </div>
